[package]
name = "reexport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.17"
reqwest = "0.11.13"
wasm-logger = "0.2.0"

perform_wasm = { git = "https://github.com/kano1101/perform-wasm.git", branch = "main" }
# 以下のコメントアウトを外すとちゃんと動作する！
once_cell = "1.16.0"
tokio = { version = "1.23.0", default-features = false, features = ["sync"] }
wasm-bindgen-futures = "0.4.33"
